# auto-image-cropper

./: .gitignore  Cargo.toml  rustfmt.toml
src/: lib.rs
