[package]
name = "autocrop"
version = "0.1.5"
authors = ["Ritiek <ritiekmalhotra123@gmail.com>"]
description = "Removes extra white borders to correctly resize canvas"
repository = "https://github.com/Ritiek/auto-image-cropper"
readme = "README.md"
keywords = ["image", "crop", "auto", "canvas", "resize"]
categories = ["multimedia::images", "command-line-utilities"]
license = "MIT"

[dependencies]
image = "0.14"
clap = "2.33"
rayon = "1.1"

[[bin]]
name = "autocrop"
